--- a/lib/messagebundles/fr.po
+++ b/lib/messagebundles/fr.po
@@ -8,16 +8,16 @@ msgstr ""
 "Project-Id-Version: LimeWire 5\n"
 "Report-Msgid-Bugs-To: LimeWire Issue Tracker "
 "<https://www.limewire.org/jira/secure/Dashboard.jspa>\n"
-"POT-Creation-Date: 2010-07-26 11:30-0400\n"
-"PO-Revision-Date: 2010-07-14 17:26+0000\n"
-"Last-Translator: computerhelp <Unknown>\n"
+"POT-Creation-Date: 2010-08-02 11:30-0400\n"
+"PO-Revision-Date: 2010-07-30 18:54+0000\n"
+"Last-Translator: Jarret <jbattisti@limewire.com>\n"
 "Language-Team: LimeWire translators <https://launchpad.net/~limewire-"
 "translators>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Launchpad-Export-Date: 2010-07-27 03:33+0000\n"
+"X-Launchpad-Export-Date: 2010-08-03 03:33+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: private-components/swingui/src/main/java/org/limewire/ui/swing/activation/ActivationPanel.java:528
@@ -2105,6 +2105,11 @@ msgid ""
 "connections on the local machine. Please add LimeWire as an exception to "
 "your security software and restart LimeWire."
 msgstr ""
+"LimeWire n'a pas pu s' initialiser et démarrer. Cela est généralement dû à "
+"un programme de sécurité bloquant l'accès de LimeWire à l'Internet ou un "
+"bouclage des connexions locales sur la machine. S'il vous plaît ajouter "
+"LimeWire comme  exception à votre logiciel de sécurité et  redémarrer "
+"LimeWire ."
 
 #: private-components/integrated-ui/src/main/java/org/limewire/ui/swing/Initializer.java:682
 msgid ""
@@ -2906,7 +2911,7 @@ msgstr "Amis"
 
 #: private-components/swingui/src/main/java/org/limewire/ui/swing/components/RemoteHostWidget.java:207
 msgid "Web Search"
-msgstr ""
+msgstr "Recherche sur le Web"
 
 #: private-components/swingui/src/main/java/org/limewire/ui/swing/components/RemoteHostWidget.java:209
 #: private-components/swingui/src/main/java/org/limewire/ui/swing/downloads/table/renderer/DownloadMessageRendererEditor.java:244
@@ -2926,7 +2931,7 @@ msgstr[1] "Utilisateurs P2P"
 
 #: private-components/swingui/src/main/java/org/limewire/ui/swing/components/RemoteHostWidget.java:280
 msgid "Locate"
-msgstr ""
+msgstr "Localiser"
 
 #: private-components/swingui/src/main/java/org/limewire/ui/swing/components/SplashWindow.java:116
 msgid "Loading LimeWire..."
@@ -4594,6 +4599,7 @@ msgstr "Mandataire :"
 #: private-components/swingui/src/main/java/org/limewire/ui/swing/options/SearchOptionPanel.java:78
 msgid "Use web search to find additional torrent sources"
 msgstr ""
+"Utiliser la recherche sur le web pour trouver des torrents supplémentaires."
 
 #: private-components/swingui/src/main/java/org/limewire/ui/swing/options/SearchOptionPanel.java:165
 msgid "Suggest smart searches"
@@ -4885,7 +4891,7 @@ msgstr "Empreinte"
 
 #: private-components/swingui/src/main/java/org/limewire/ui/swing/properties/FileInfoGeneralPanel.java:375
 msgid "Open Website"
-msgstr ""
+msgstr "Ouvrir le site web"
 
 #: private-components/swingui/src/main/java/org/limewire/ui/swing/properties/FileInfoGeneralPanel.java:383
 msgid "Block Address"
@@ -5809,7 +5815,7 @@ msgstr "Date"
 
 #: private-components/swingui/src/main/java/org/limewire/ui/swing/util/FilePropertyKeyUtils.java:43
 msgid "User Agent"
-msgstr ""
+msgstr "Identificateur"
 
 #: private-components/swingui/src/main/java/org/limewire/ui/swing/util/FilePropertyKeyUtils.java:44
 msgid "Referrer"
@@ -6165,7 +6171,7 @@ msgstr "J’accepte"
 #. wrap
 #: private-components/swingui/src/main/java/org/limewire/ui/swing/wizard/SetupActivationPanel.java:66
 msgid "Did you purchase LimeWire PRO?"
-msgstr ""
+msgstr "Avez-vous acheté LimeWire PRO ?"
 
 #. wrap
 #. wrap
@@ -6176,18 +6182,23 @@ msgid ""
 "always do it later by clicking on the \"File\" tab in LimeWire and then "
 "clicking \"Licenses.\""
 msgstr ""
+"Si c’est le cas, veuillez insérer votre code d’activation – nous vous "
+"l’avons fourni en ligne et par e-mail lorsque vous vous êtes inscrit. Si "
+"vous ne voulez pas activer la version PRO maintenant, vous pourrez toujours "
+"le faire plus tard en cliquant sur l'onglet « Fichier » de LimeWire puis en "
+"cliquant sur « Licences »."
 
 #: private-components/swingui/src/main/java/org/limewire/ui/swing/wizard/SetupActivationPanel.java:88
 msgid "Your License Key:"
-msgstr ""
+msgstr "Votre code d’activation :"
 
 #: private-components/swingui/src/main/java/org/limewire/ui/swing/wizard/SetupActivationPanel.java:96
 msgid "Activate LimeWire PRO"
-msgstr ""
+msgstr "Activez LimeWire PRO"
 
 #: private-components/swingui/src/main/java/org/limewire/ui/swing/wizard/SetupActivationPanel.java:119
 msgid "I don't know my activation key"
-msgstr ""
+msgstr "Je ne connais pas mon code d’activation"
 
 #: private-components/swingui/src/main/java/org/limewire/ui/swing/wizard/SetupActivationPanel.java:128
 #, java-format
@@ -6355,7 +6366,7 @@ msgstr "LimeWire PRO"
 
 #: private-components/swingui/src/main/java/org/limewire/ui/swing/wizard/SetupPage3.java:114
 msgid "I didn't purchase LimeWire PRO"
-msgstr ""
+msgstr "Je n’ai pas acheté LimeWire PRO"
 
 #: private-components/swingui/src/main/java/org/limewire/ui/swing/wizard/SetupPage3.java:123
 msgid "You can edit your licenses from File > License"
